so this is sort of in between as I'm trying to make this a proper module

--- a/articles/11-12-2012.md
+++ b/articles/11-12-2012.md
@@ -1,4 +1,10 @@
-Main
-====
+{
+	"title":"Test Article"
+}
+
+:body
+Test Article
 
 test hey sup whats. [you](localhost).
+
+{	"title":"Test Article",	}
